[tool.poetry]
name = "wanip"
version = "0.1.0"
description = "Tool to retrieve WAN ip"
authors = ["ryan <citizen.townshend@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

